// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PermissionsRole/> not editable 1`] = `
<div>
  <div
    class="row container-expandable"
  >
    <div
      class="container-expandable-grey container-expandable-child__inactive container-expandable__active"
    >
      <i
        class="container-expandable-child__img"
      >
        <i
          class="fa fa-unlock-alt fa-3x"
          style="padding: 5px;"
        />
      </i>
      <div
        class="pull-right container-expandable-child__chevron"
      >
        <i
          class="fa fa-chevron-down"
        />
      </div>
      <div
        class="container-expandable-heading"
      >
        <div
          class="container-expandable-heading--clause"
        >
          <span
            class="permissions-title"
          >
            Editor
          </span>
        </div>
        <div>
          <span
            class="container-expandable-heading"
          >
            <span>
              3
               member
              s
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="permissions-groups-expandable-container"
    >
      <div>
        Editors may read, add, update and delete information.
      </div>
      <div
        class="permissions-assignments-row row"
      >
        <div
          class="col-sm-6 col-xs-12"
        >
          <div>
            Groups:
          </div>
          <ul
            class="permissions-groups-members-ul"
          >
            <li
              class="permissions-groups-member-li"
            >
              <button
                class="permissions-button-display btn btn-default"
                type="button"
              >
                Editor User Group
              </button>
            </li>
          </ul>
        </div>
        <div
          class="col-sm-6 col-xs-12"
        >
          <div>
            Users:
          </div>
          <ul
            class="permissions-groups-members-ul"
          >
            <li
              class="permissions-groups-member-li"
            >
              <button
                class="permissions-button-display btn btn-default"
                type="button"
              >
                cnathe@labkey.com (Cory Nathe)
              </button>
            </li>
            <li
              class="permissions-groups-member-li"
            >
              <button
                class="permissions-button-display btn btn-default"
                type="button"
              >
                Inactive User: 4971
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PermissionsRole/> showing a selected and disabled principal 1`] = `
<div>
  <div
    class="row container-expandable"
  >
    <div
      class="container-expandable-grey container-expandable-child__inactive container-expandable__active"
    >
      <i
        class="container-expandable-child__img"
      >
        <i
          class="fa fa-unlock-alt fa-3x"
          style="padding: 5px;"
        />
      </i>
      <div
        class="pull-right container-expandable-child__chevron"
      >
        <i
          class="fa fa-chevron-down"
        />
      </div>
      <div
        class="container-expandable-heading"
      >
        <div
          class="container-expandable-heading--clause"
        >
          <span
            class="permissions-title"
          >
            Editor
          </span>
        </div>
        <div>
          <span
            class="container-expandable-heading"
          >
            <span>
              3
               member
              s
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="permissions-groups-expandable-container"
    >
      <div>
        Editors may read, add, update and delete information.
      </div>
      <div
        class="permissions-assignments-row row"
      >
        <div
          class="col-sm-6 col-xs-12"
        >
          <div>
            Groups:
          </div>
          <ul
            class="permissions-groups-members-ul"
          >
            <li
              class="permissions-groups-member-li"
            >
              <div
                class="permissions-button-group btn-group"
              >
                <button
                  class="btn btn-default"
                  type="button"
                >
                  <i
                    class="fa fa-remove"
                  />
                </button>
                <button
                  class="permissions-button-display btn btn-default"
                  type="button"
                >
                  Editor User Group
                </button>
              </div>
            </li>
          </ul>
        </div>
        <div
          class="col-sm-6 col-xs-12"
        >
          <div>
            Users:
          </div>
          <ul
            class="permissions-groups-members-ul"
          >
            <li
              class="permissions-groups-member-li"
            >
              <div
                class="permissions-button-group btn-group"
              >
                <div
                  class="disabled-button-with-tooltip "
                >
                  <button
                    class="btn btn-primary"
                    disabled=""
                    type="button"
                  >
                    <i
                      class="fa fa-remove"
                    />
                  </button>
                </div>
                <button
                  class="permissions-button-display btn btn-primary"
                  type="button"
                >
                  cnathe@labkey.com (Cory Nathe)
                </button>
              </div>
            </li>
            <li
              class="permissions-groups-member-li"
            >
              <div
                class="permissions-button-group btn-group"
              >
                <button
                  class="btn btn-default"
                  type="button"
                >
                  <i
                    class="fa fa-remove"
                  />
                </button>
                <button
                  class="permissions-button-display btn btn-default"
                  type="button"
                >
                  Inactive User: 4971
                </button>
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="select-input-container form-group row"
      >
        <div
          class="col-xs-12"
        >
          <div
            class="select-input css-b62m3t-container"
            id="selectinput-2"
          >
            <span
              class="css-1f43avz-a11yText-A11yText"
              id="react-select-4-live-region"
            />
            <span
              aria-atomic="false"
              aria-live="polite"
              aria-relevant="additions text"
              class="css-1f43avz-a11yText-A11yText"
            />
            <div
              class="select-input__control css-13cymwt-control"
            >
              <div
                class="select-input__value-container css-1fdsijx-ValueContainer"
              >
                <div
                  class="select-input__placeholder css-1jqq78o-placeholder"
                  id="react-select-4-placeholder"
                >
                  Add member or group...
                </div>
                <div
                  class="select-input__input-container css-qbdosj-Input"
                  data-value=""
                >
                  <input
                    aria-autocomplete="list"
                    aria-describedby="react-select-4-placeholder"
                    aria-expanded="false"
                    aria-haspopup="true"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    class="select-input__input"
                    id="react-select-4-input"
                    role="combobox"
                    spellcheck="false"
                    style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="select-input__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="select-input__indicator-separator css-1u9des2-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="select-input__indicator select-input__dropdown-indicator css-1xc3v61-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-tj5bde-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <input
              name="addRoleAssignment"
              type="hidden"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PermissionsRole/> with both group and user assignments 1`] = `
<div>
  <div
    class="row container-expandable"
  >
    <div
      class="container-expandable-grey container-expandable-child__inactive container-expandable__active"
    >
      <i
        class="container-expandable-child__img"
      >
        <i
          class="fa fa-unlock-alt fa-3x"
          style="padding: 5px;"
        />
      </i>
      <div
        class="pull-right container-expandable-child__chevron"
      >
        <i
          class="fa fa-chevron-down"
        />
      </div>
      <div
        class="container-expandable-heading"
      >
        <div
          class="container-expandable-heading--clause"
        >
          <span
            class="permissions-title"
          >
            Editor
          </span>
        </div>
        <div>
          <span
            class="container-expandable-heading"
          >
            <span>
              3
               member
              s
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="permissions-groups-expandable-container"
    >
      <div>
        Editors may read, add, update and delete information.
      </div>
      <div
        class="permissions-assignments-row row"
      >
        <div
          class="col-sm-6 col-xs-12"
        >
          <div>
            Groups:
          </div>
          <ul
            class="permissions-groups-members-ul"
          >
            <li
              class="permissions-groups-member-li"
            >
              <div
                class="permissions-button-group btn-group"
              >
                <button
                  class="btn btn-default"
                  type="button"
                >
                  <i
                    class="fa fa-remove"
                  />
                </button>
                <button
                  class="permissions-button-display btn btn-default"
                  type="button"
                >
                  Editor User Group
                </button>
              </div>
            </li>
          </ul>
        </div>
        <div
          class="col-sm-6 col-xs-12"
        >
          <div>
            Users:
          </div>
          <ul
            class="permissions-groups-members-ul"
          >
            <li
              class="permissions-groups-member-li"
            >
              <div
                class="permissions-button-group btn-group"
              >
                <button
                  class="btn btn-default"
                  type="button"
                >
                  <i
                    class="fa fa-remove"
                  />
                </button>
                <button
                  class="permissions-button-display btn btn-default"
                  type="button"
                >
                  cnathe@labkey.com (Cory Nathe)
                </button>
              </div>
            </li>
            <li
              class="permissions-groups-member-li"
            >
              <div
                class="permissions-button-group btn-group"
              >
                <button
                  class="btn btn-default"
                  type="button"
                >
                  <i
                    class="fa fa-remove"
                  />
                </button>
                <button
                  class="permissions-button-display btn btn-default"
                  type="button"
                >
                  Inactive User: 4971
                </button>
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="select-input-container form-group row"
      >
        <div
          class="col-xs-12"
        >
          <div
            class="select-input css-b62m3t-container"
            id="selectinput-1"
          >
            <span
              class="css-1f43avz-a11yText-A11yText"
              id="react-select-3-live-region"
            />
            <span
              aria-atomic="false"
              aria-live="polite"
              aria-relevant="additions text"
              class="css-1f43avz-a11yText-A11yText"
            />
            <div
              class="select-input__control css-13cymwt-control"
            >
              <div
                class="select-input__value-container css-1fdsijx-ValueContainer"
              >
                <div
                  class="select-input__placeholder css-1jqq78o-placeholder"
                  id="react-select-3-placeholder"
                >
                  Add member or group...
                </div>
                <div
                  class="select-input__input-container css-qbdosj-Input"
                  data-value=""
                >
                  <input
                    aria-autocomplete="list"
                    aria-describedby="react-select-3-placeholder"
                    aria-expanded="false"
                    aria-haspopup="true"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    class="select-input__input"
                    id="react-select-3-input"
                    role="combobox"
                    spellcheck="false"
                    style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="select-input__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="select-input__indicator-separator css-1u9des2-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="select-input__indicator select-input__dropdown-indicator css-1xc3v61-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-tj5bde-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <input
              name="addRoleAssignment"
              type="hidden"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PermissionsRole/> without assignments 1`] = `
<div>
  <div
    class="row container-expandable"
  >
    <div
      class="container-expandable-grey container-expandable-child__inactive container-expandable__active"
    >
      <i
        class="container-expandable-child__img"
      >
        <i
          class="fa fa-unlock-alt fa-3x"
          style="padding: 5px;"
        />
      </i>
      <div
        class="pull-right container-expandable-child__chevron"
      >
        <i
          class="fa fa-chevron-down"
        />
      </div>
      <div
        class="container-expandable-heading"
      >
        <div
          class="container-expandable-heading--clause"
        >
          <span
            class="permissions-title"
          >
            Author
          </span>
        </div>
        <div>
          <span
            class="container-expandable-heading"
          >
            <span>
              0
               member
              s
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="permissions-groups-expandable-container"
    >
      <div>
        Authors may read and add information in some cases, but may update and delete only information they added. Supported for only Message Boards. See the online documentation for details.
      </div>
      <div
        class="permissions-assignments-row row"
      >
        <div
          class="col-sm-6 col-xs-12"
        >
          <div>
            Groups:
          </div>
          <ul
            class="permissions-groups-members-ul"
          >
            <li
              class="permissions-groups-member-li permissions-groups-member-none"
            >
              None
            </li>
          </ul>
        </div>
        <div
          class="col-sm-6 col-xs-12"
        >
          <div>
            Users:
          </div>
          <ul
            class="permissions-groups-members-ul"
          >
            <li
              class="permissions-groups-member-li permissions-groups-member-none"
            >
              None
            </li>
          </ul>
        </div>
      </div>
      <div
        class="select-input-container form-group row"
      >
        <div
          class="col-xs-12"
        >
          <div
            class="select-input css-b62m3t-container"
            id="selectinput-0"
          >
            <span
              class="css-1f43avz-a11yText-A11yText"
              id="react-select-2-live-region"
            />
            <span
              aria-atomic="false"
              aria-live="polite"
              aria-relevant="additions text"
              class="css-1f43avz-a11yText-A11yText"
            />
            <div
              class="select-input__control css-13cymwt-control"
            >
              <div
                class="select-input__value-container css-1fdsijx-ValueContainer"
              >
                <div
                  class="select-input__placeholder css-1jqq78o-placeholder"
                  id="react-select-2-placeholder"
                >
                  Add member or group...
                </div>
                <div
                  class="select-input__input-container css-qbdosj-Input"
                  data-value=""
                >
                  <input
                    aria-autocomplete="list"
                    aria-describedby="react-select-2-placeholder"
                    aria-expanded="false"
                    aria-haspopup="true"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    class="select-input__input"
                    id="react-select-2-input"
                    role="combobox"
                    spellcheck="false"
                    style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="select-input__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="select-input__indicator-separator css-1u9des2-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="select-input__indicator select-input__dropdown-indicator css-1xc3v61-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-tj5bde-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <input
              name="addRoleAssignment"
              type="hidden"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
